# DBYTE

./: .dbyterc  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LANGUAGE_SPEC.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SMALLNOTE.TXT  SUPPORT.md  smallnote.TXT  temp_disasm.txt  v0.6_goal.dby  v0.6_goal_simple.dby  v0.6_len_check.dby  verify_out.txt  verify_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
benchmarks/: BENCHMARKS.md  binary_read_u32.dby  buffer_replace.dby  bytes_find.dby  bytes_find_single.dby  function_call.dby  function_call_chain.dby  function_call_int.dby  function_call_loop_return.dby  function_call_many_args.dby  function_call_nested.dby  int_compare_loop.dby  loop_sum.dby  loop_sum_large.dby  nested_int_loop.dby  patch_workflow.dby
benchmarks/python/: binary_read_u32.py  buffer_replace.py  bytes_find.py  bytes_find_single.py  function_call.py  function_call_chain.py  function_call_int.py  function_call_loop_return.py  function_call_many_args.py  function_call_nested.py  int_compare_loop.py  loop_sum.py  loop_sum_large.py  nested_int_loop.py  patch_workflow.py
crates/dbyte_ast/: Cargo.toml
crates/dbyte_bytecode/: Cargo.toml
crates/dbyte_cli/: Cargo.toml
crates/dbyte_cli/src/: main.rs
crates/dbyte_compiler/: Cargo.toml
crates/dbyte_embed/: Cargo.toml
crates/dbyte_interp/: Cargo.toml
crates/dbyte_interp/src/: lib.rs
crates/dbyte_kernel_vm/: Cargo.toml
crates/dbyte_lexer/: Cargo.toml
crates/dbyte_module/: Cargo.toml
crates/dbyte_parser/: Cargo.toml
crates/dbyte_project/: Cargo.toml
crates/dbyte_typeck/: Cargo.toml
crates/dbyte_vm/: Cargo.toml
crates/dbyte_vm/src/: lib.rs
docs/: DBYTEOS_ALPHA.md  DBYTEOS_BETA.md  DBYTEOS_BOOT.md  DBYTEOS_COMMANDS.md  DBYTEOS_CONFIG.md  DBYTEOS_DIAGNOSTICS.md  DBYTEOS_KERNEL.md  DBYTEOS_ONBOARDING.md  DBYTEOS_PACKAGE.md  DBYTEOS_PERSONAL_ALPHA.md  DBYTEOS_PREFERENCES.md  DBYTEOS_PROFILE.md  DBYTEOS_PROJECTS.md  DBYTEOS_SECURITY.md  DBYTEOS_SNAPSHOT.md  DBYTEOS_TASKS.md  KERNEL_EXCEPTIONS.md  KERNEL_INTERRUPTS.md  KERNEL_IRQ.md  KERNEL_LAB.md  OS_DIRECTION.md  QEMU_BOOT_SMOKE.md  SANCTUM.md  WEBSITE.md  language-spec.md
examples/: binary_patcher.dby  binary_read.dby  hash_file.dby  hello.dby  patch_file.dby  u32_scanner.dby
examples/dbyteos/: .dbyterc  README.md  boot.dby
examples/notes/: README.md
examples/sanctum/: .dbyterc  README.md  boot.dby  sanctum_init.dby  sanctum_status.dby
kernel-lab/: Cargo.toml  README.md
kernel-lab/.cargo/: config.toml
kernel-lab/boot/: linker.ld
kernel-lab/scripts/: bootstrap.ps1  build.ps1  run.ps1
kernel-lab/src/: dbyte_vm_probe.rs  gfx_console.rs  idt.rs  interrupts.rs  irq.rs  main.rs  mem.rs  page_fault.rs  pic.rs  serial.rs  vga.rs  vga_gfx.rs  vga_window.rs
personal_tools/: .dbyterc  bininfo.dby  find_bytes.dby  hello.dby  hexdump.dby  patch_bytes.dby  read_u32_table.dby
personal_tools/bytedeck/: README.md  musicplayer.dby  run.ps1
personaltools/: .dbyterc  bininfo.dby  find_bytes.dby  hexdump.dby  patch_bytes.dby  read_u32_table.dby
release-v1.0.0/: dbyte-v1.0.0.bundle
scripts/: package_release.ps1  verify.ps1
test_release_v400/: INSTALL.md  LANGUAGE_SPEC.md  LICENSE  README.md
test_release_v400/benchmarks/: BENCHMARKS.md
test_release_v400/docs/: DBYTEOS_ALPHA.md  DBYTEOS_BOOT.md  DBYTEOS_COMMANDS.md  (+2 more)
(+393 files in other folders)
