[workspace]
members = [
    "crates/dbyte_ast",
    "crates/dbyte_lexer",
    "crates/dbyte_parser",
    "crates/dbyte_typeck",
    "crates/dbyte_interp",
    "crates/dbyte_cli",
    "crates/dbyte_bytecode",
    "crates/dbyte_compiler",
    "crates/dbyte_module",
    "crates/dbyte_project",
    "crates/dbyte_vm",
    "crates/dbyte_embed",
]
resolver = "2"

[workspace.package]
version = "5.3.1"
edition = "2021"
authors = ["Deadbyte"]
license = "MIT"

[workspace.dependencies]
dbyte_ast    = { path = "crates/dbyte_ast" }
dbyte_lexer  = { path = "crates/dbyte_lexer" }
dbyte_parser = { path = "crates/dbyte_parser" }
dbyte_typeck = { path = "crates/dbyte_typeck" }
dbyte_interp = { path = "crates/dbyte_interp" }
dbyte_bytecode = { path = "crates/dbyte_bytecode" }
dbyte_compiler = { path = "crates/dbyte_compiler" }
dbyte_module = { path = "crates/dbyte_module" }
dbyte_project = { path = "crates/dbyte_project" }
dbyte_vm = { path = "crates/dbyte_vm" }
dbyte_embed = { path = "crates/dbyte_embed" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
hex = "0.4.3"
sha2 = "0.10.8"
byteorder = "1.5.0"
memchr = "2"
