[package]
name = "dbyte_vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dbyte_ast.workspace = true
dbyte_bytecode.workspace = true
dbyte_compiler.workspace = true
dbyte_lexer.workspace = true
dbyte_module.workspace = true
dbyte_parser.workspace = true
hex = "0.4.3"
sha2 = "0.10.8"
